--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ ul {
 
 .button_1 {
 	height: 38px;
-	background:#e8491d;
+	background:#3295D6;
 	border: 0;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -31,7 +31,7 @@ ul {
 
 .dark {
 	padding: 15px;
-	background: #35424a;
+	background: #2E4053;
 	color: #ffffff;
 	margin-top: 10px;
 	margin-bottom: 10px;
@@ -41,11 +41,11 @@ ul {
 
 /* Header Bar */
 header {
-	background: #35424a;
+	background: #2E4053;
 	color:#ffffff;
 	padding-top:30px;
 	min-height: 70px;
-	border-bottom:#e8491d 3px solid;
+	border-bottom:#3295D6 3px solid;
 }
 
 header a {
@@ -76,7 +76,7 @@ header nav {
 } 
 
 header .highlight, header .current a {
-	color: #e8491d;
+	color: #3295D6;
 	font-weight: bold;
 }
 
@@ -112,7 +112,7 @@ header a:hover {
 #newsletter {
 	padding: 50px;
 	color: #ffffff;
-	background: #35424a;
+	background: #2E4053;
 }
 
 #newsletter h1 {
@@ -194,7 +194,7 @@ footer {
 	padding: 20px;
 	margin-top: 20px;
 	color: #ffffff;
-	background-color:#e8491d;
+	background-color:#3295D6;
 	text-align: center;
 }
 
